<resources>

    <!-- General -->

    <string name="app_name">iRememberSubscriber</string>
    <string name="btn_start">START</string>
    <string name="et_room_name_hint">Your room name</string>
    <string name="et_ip_address_hint">Kitchen unit's IP-address</string>
    <string name="btn_disconnect">CLOSE</string>
    <string name="btn_settings">SETTINGS</string>
    <string name="tv_main_label">A message will be displayed here when meal is ready.</string>
    <string name="tv_wrong_wifi">At the moment, there is no contact with the kitchen unit.\n
        Please check you are connected to the correct WiFi.</string>

    <string name="tv_tab_info">Info</string>
    <string name="tv_tab_background">Background</string>
    <string name="tv_tab_music">Music</string>
    <string name="tv_tab_general">General</string>
    <string name="tv_tab_screensaver">Screen saver</string>
    <string name="tv_click_to_close">Press screen for removing the message.</string>

    <!-- Settings Labels -->

    <string name="tv_background_label">Current background colour for the messages</string>
    <string name="tv_text_label">Current text colour for the messages</string>
    <string name="tv_music_label">Current music for the messages</string>
    <string name="tv_screensaver_label">Current screen saver</string>

    <string name="tv_info_label_1">
        iRemember is an application helping the staff in kitchen sending message to you when
        food is ready
    </string>

    <string name="tv_info_label_2">
        At the tabs at the top, you can set the sound and appearance for the messages from the
        kitchen. E.g. you can set music and colour.
    </string>

    <string name="tv_roomname_label">Please enter room name</string>
    <string name="tv_allow_music_label">Is music allowed when displaying messages?</string>
    <string name="tv_allow_screensaver_label">Do you want to use a picture as screen  saver?
        If no, the screen will be dark when in stand by mode.</string>
    <string name="tv_choose_service">Please choose a kitchen unit</string>
    <string name="tv_no_services">Could not find any available kitchen unit.</string>
    <string name="tv_searching">Searching...</string>
    <string name="tv_discovery_intro_1">You configure your unit here.</string>
    <string name="tv_discovery_intro_2">You need to give your room unit a name.</string>
    <string name="tv_discovery_intro_3">
        Aftere naming, we search fro available kitchen units. The unit you choose will be able
        to send messages to you when it is time for food or coffee.
    </string>

    <string name="tv_restriction_label">Please observe your current settings.</string>
    <string name="tv_restriction_reminder">Kitchen is not allowed to send messages.</string>
    <string name="tv_restriction_music">Music is not allowed when receiving messages from
        the kitchen.</string>

    <!-- Settings Buttons and Options -->

    <string name="option_yes_label">Yes</string>
    <string name="option_no_label">No</string>
    <string name="btn_save_roomname">Save</string>
    <string name="btn_search_services">Search for kitchen units. </string>
    <string name="btn_search_again">Search again</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_back">Return</string>
    <string name="btn_input_ip">Enter manually</string>
    <string name="btn_save_ip">Save IP-address</string>
    <string name="btn_upload_screensaver">Pick a picture from my gallery</string>

    <!-- Notifications -->
    <string name="foreground_started">Listening</string>

</resources>
