<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iremember.subscriber.iremembersubscriber.Fragments.DiscoveryServiceFragment"
    android:id="@+id/fragment_discovery_services"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_layout"
    android:paddingRight="@dimen/padding_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_choose_service"
            android:textSize="@dimen/textsize_large"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_size_half"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@color/dark" />

        <LinearLayout
            android:id="@+id/container_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <EditText
            android:id="@+id/et_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/et_ip_address_hint"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textsize_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:maxLength="15"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_searching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_searching"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_no_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_no_services"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="italic"
            android:layout_marginBottom="@dimen/margin_medium" />

        <Button
            android:id="@+id/btn_input_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_input_ip"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold"
            android:textColor="@color/light"
            android:background="@color/green"
            android:padding="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_small" />

        <Button
            android:id="@+id/btn_save_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_ip"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold"
            android:textColor="@color/light"
            android:background="@color/green"
            android:padding="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_small" />

        <Button
            android:id="@+id/btn_search_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search_again"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold"
            android:textColor="@color/light"
            android:background="@color/turquoise"
            android:padding="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_small" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold"
            android:textColor="@color/light"
            android:background="@color/stop"
            android:padding="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_small" />
    </LinearLayout>

</ScrollView>