<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iremember.subscriber.iremembersubscriber.Fragments.SettingsGeneralFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_medium"
                android:text="@string/tv_allow_reminders_label"
                android:paddingRight="@dimen/padding_large"
                />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_allow_reminders_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_small"
                    android:text="@string/option_yes_label"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/dark" />
                <RadioButton
                    android:id="@+id/rb_allow_reminders_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_small"
                    android:text="@string/option_no_label"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/dark" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_size_half"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@color/dark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_medium"
                android:text="@string/tv_allow_music_label"
                android:paddingRight="@dimen/padding_large"
                />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_allow_music_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_small"
                    android:text="@string/option_yes_label"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/dark" />
                <RadioButton
                    android:id="@+id/rb_allow_music_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_small"
                    android:text="@string/option_no_label"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/dark" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_size_half"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@color/dark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_medium"
                android:text="@string/tv_roomname_label"
                android:paddingRight="@dimen/padding_large"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_room_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textSize="@dimen/textsize_medium"
                    android:gravity="center_horizontal"
                    android:maxLength="10"
                    />

                <Button
                    android:id="@+id/btn_save_room_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="@dimen/btn_padding_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/btn_save_roomname"
                    android:textSize="@dimen/btn_textsize_medium"
                    android:textColor="@color/light"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
